Add support for configuring 'rseqc' runner in settings & passing to QC pipeline.

--- a/config/auto_process.ini.sample
+++ b/config/auto_process.ini.sample
@@ -136,6 +136,7 @@ bcl_convert = SimpleJobRunner
 fastqc = SimpleJobRunner
 fastq_screen  = SimpleJobRunner
 qualimap = SimpleJobRunner
+rseqc = SimpleJobRunner
 star = SimpleJobRunner
 stats = SimpleJobRunner
 rsync = SimpleJobRunner
