--- a/config/auto_process.ini.sample
+++ b/config/auto_process.ini.sample
@@ -133,6 +133,7 @@ nprocessors = 1
 [runners]
 bcl2fastq = SimpleJobRunner
 bcl_convert = SimpleJobRunner
+barcode_analysis = SimpleJobRunner
 fastqc = SimpleJobRunner
 fastq_screen  = SimpleJobRunner
 qualimap = SimpleJobRunner
@@ -140,7 +141,9 @@ rseqc = SimpleJobRunner
 star = SimpleJobRunner
 stats = SimpleJobRunner
 rsync = SimpleJobRunner
-cellranger = SimpleJobRunner
+cellranger_mkfastq = SimpleJobRunner
+cellranger_count = SimpleJobRunner
+cellranger_multi = SimpleJobRunner
 icell8 = SimpleJobRunner
 icell8_contaminant_filter = SimpleJobRunner
 icell8_statistics = SimpleJobRunner
