--- a/config/auto_process.ini.sample
+++ b/config/auto_process.ini.sample
@@ -79,7 +79,7 @@ create_empty_fastqs = False
 # Comma-separated list of panel names
 # Each panel needs to be defined in its own 'screen:...' section
 #fastq_screens = model_organisms,other_organisms,rRNA
-fastq_screen_subset = 100000
+fastq_subset_size = 100000
 # By default nprocessors taken from runner
 #nprocessors = 1
 # Whether to use 'legacy' naming convention for FastqScreen
