config/auto_process.ini.sample: add 'merge_fastqs' to 'runners' section.

--- a/config/auto_process.ini.sample
+++ b/config/auto_process.ini.sample
@@ -134,6 +134,7 @@ nprocessors = 1
 bcl2fastq = SimpleJobRunner
 bcl_convert = SimpleJobRunner
 barcode_analysis = SimpleJobRunner
+merge_fastqs = SimpleJobRunner
 fastqc = SimpleJobRunner
 fastq_screen  = SimpleJobRunner
 qualimap = SimpleJobRunner
