settings: add new 'publish_qc' runner.

--- a/config/auto_process.ini.sample
+++ b/config/auto_process.ini.sample
@@ -141,6 +141,7 @@ qualimap = SimpleJobRunner
 rseqc = SimpleJobRunner
 star = SimpleJobRunner
 stats = SimpleJobRunner
+publish_qc = SimpleJobRunner
 rsync = SimpleJobRunner
 cellranger_mkfastq = SimpleJobRunner
 cellranger_count = SimpleJobRunner
