--- a/config/auto_process.ini.sample
+++ b/config/auto_process.ini.sample
@@ -1,186 +1,169 @@
 # Configuration file for auto_process
 #
 # General configuration
-[general]
-default_runner = SimpleJobRunner
-max_concurrent_jobs = 12
-max_cores = None
-max_batches = None
-poll_interval = 5
-
-# Explicitly specify modulefiles to load for each step
-# Specify modulefiles as a comma-separated list
-[modulefiles]
-make_fastqs = None
-bcl2fastq = None
-bcl_convert = None
-cellranger_mkfastq = None
-cellranger_atac_mkfastq = None
-cellranger_arc_mkfastq = None
-spaceranger_mkfastq = None
-run_qc = None
-fastq_screen = None
-fastqc = None
-fastq_strand = None
-cellranger = None
-report_qc = None
-publish_qc = None
-process_icell8 = None
-cutadapt = None
+# See https://auto-process-ngs.readthedocs.io/en/latest/configuration.html#managing-concurrent-jobs-and-process-loads
+;[general]
+;default_runner = SimpleJobRunner
+;max_concurrent_jobs = 12
+;max_cores = None
+;max_batches = None
+;poll_interval = 5
 
 # Conda dependency resolution
-[conda]
-enable_conda = False
-env_dir = None
+# See https://auto-process-ngs.readthedocs.io/en/latest/configuration.html#using-conda-to-resolve-pipeline-dependencies
+;[conda]
+;enable_conda = False
+;env_dir = None
+
+# Environment modulefiles
+# See https://auto-process-ngs.readthedocs.io/en/latest/configuration.html#using-environment-modules
+;[modulefiles]
+;bcl2fastq = None
+;bcl_convert = None
+;cellranger_mkfastq = None
+;cellranger_atac_mkfastq = None
+;cellranger_arc_mkfastq = None
+;spaceranger_mkfastq = None
+;fastq_screen = None
+;fastqc = None
+;fastq_strand = None
+;cellranger = None
 
 # BCL to Fastq conversion settings
-[bcl_conversion]
-bcl_converter = bcl2fastq>=1.8.4
-no_lane_splitting = False
-create_empty_fastqs = False
-# By default nprocessors taken from runner
-#nprocessors = 1
+# See https://auto-process-ngs.readthedocs.io/en/latest/configuration.html#specifying-bcl-to-fastq-conversion-software-and-options
+;[bcl_conversion]
+;bcl_converter = bcl2fastq>=2.20
+;no_lane_splitting = False
+;create_empty_fastqs = False
+;nprocessors = None
 
 # Sequencers and platforms
 # Define a 'sequencer:INSTRUMENT' section for
 # each sequencing instrument name and set
 # the corresponding parameters (model, platform)
 # These values will be specific to the local site
-#[sequencer:SN7001250]
-#model = "HiSeq 2500"
-#platform = hiseq
+# For example:
+;[sequencer:SN7001250]
+;model = HiSeq 2500
+;platform = hiseq
 
 # Organisms
-# Define an 'organism:NAME' section for each organism
-# and set the corresponding parameters  pointing to the
-# reference datasets:
-# - star_index
-# - bowtie_index
-# - annotation_bed
-# - annotation_gtf
-# - cellranger_reference
-# - cellranger_premrna_reference
-# - cellranger_atac_reference
-# - cellranger_arc_reference
-# - cellranger_probe_set
+# See https://auto-process-ngs.readthedocs.io/en/latest/requirements.html#reference-data
+# Define an 'organism:NAME' section for each organism and set the
+# corresponding parameters pointing to the reference datasets
 # These values will be specific to the local site
-#[organism:human]
-#star_index = /data/genomeIndexes/hg38/STAR/
-#bowtie_index = /data/genomeIndexes/hg38/bowtie/
-#annotation_bed = /data/genomeIndexes/hg38/annotation/hg38.bed
-#annotation_gtf = /data/genomeIndexes/hg38/annotation/hg38.gtf
-#cellranger_reference = /data/cellranger/refdata-cellranger-GRCh38-1.2.0
-#cellranger_premrna_reference = /data/cellranger/refdata-cellranger-GRCh38-1.0.1-pre_mrna
-#cellranger_atac_reference = /data/cellranger/refdata-cellranger-atac-GRCh38-1.0.1
-#cellranger_arc_reference = /data/cellranger/refdata-cellranger-arc-GRCh38-2020-A
-#cellranger_probe_set = /data/cellranger/Probe_Set_v1.0_GRCh38-2020-A.csv
+# For example:
+;[organism:human]
+;star_index = $REF_DATA/hg38/STAR/
+;bowtie_index = $REF_DATA/hg38/bowtie/
+;annotation_bed = $REF_DATA/hg38/annotation/hg38.bed
+;annotation_gtf = $REF_DATA/hg38/annotation/hg38.gtf
+;cellranger_reference = $REF_DATA/10x/refdata-cellranger-GRCh38-1.2.0
+;cellranger_premrna_reference = $REF_DATA/10x/refdata-cellranger-GRCh38-1.0.1-pre_mrna
+;cellranger_atac_reference = $REF_DATA/10x/refdata-cellranger-atac-GRCh38-1.0.1
+;cellranger_arc_reference = $REF_DATA/10x/refdata-cellranger-arc-GRCh38-2020-A
+;cellranger_probe_set = $REF_DATA/10x/Probe_Set_v1.0_GRCh38-2020-A.csv
 
 # QC settings
-[qc]
-# FastqScreen
-# Comma-separated list of panel names
-# Each panel needs to be defined in its own 'screen:...' section
-#fastq_screens = model_organisms,other_organisms,rRNA
-fastq_subset_size = 100000
-# By default nprocessors taken from runner
-#nprocessors = 1
-# Whether to use 'legacy' naming convention for FastqScreen
-# output files
-#use_legacy_screen_names = False
+# See https://auto-process-ngs.readthedocs.io/en/latest/requirements.html#fastqscreen
+# - fastq_screens is comma-separated list of panel names
+#   (each panel needs to be defined in its own 'screen:...' section)
+# - nprocessors taken from runner by default (recommended)
+;[qc]
+;fastq_screens = model_organisms,other_organisms,rRNA
+;fastq_subset_size = 100000
+;nprocessors = None
+;use_legacy_screen_names = False
 
 # Fastq screen panels
+# See https://auto-process-ngs.readthedocs.io/en/latest/requirements.html#fastqscreen
 # Define a 'screen:NAME' section for each panel
 # and set the 'conf_file' parameter to point to the
 # corresponding FastqScreen configuration file
-#[screen:model_organisms]
-#conf_file = /data/fastq_screen/model_organisms.conf
+;[screen:model_organisms]
+;conf_file = $REF_DATA/fastq_screen/model_organisms.conf
 
-# icell8 settings
-[icell8]
-aligner = None
-batch_size = 5000000
-mammalian_conf_file = None
-contaminants_conf_file = None
-nprocessors_contaminant_filter = 1
-nprocessors_statistics = 1
-
-# 10xGenomics settings
-# cellranger_jobmode defaults to 'local': set to 'sge' to use SGE jobmanager
-# See https://support.10xgenomics.com/single-cell-gene-expression/software/pipelines/latest/advanced/cluster-mode
-[10xgenomics]
-cellranger_jobmode = local
-# cellranger_maxjobs and cellranger_mempercore only used if jobmode is
-# not 'local'
-cellranger_maxjobs = 24
-cellranger_mempercore = 5
-cellranger_jobinterval = 100
-# cellranger_localmem and cellranger_localcores only used if jobmode
-# is 'local'
-cellranger_localmem = 5
-cellranger_localcores = 1
+# 10xGenomics 'cellranger' settings
+# - cellranger_jobmode defaults to 'local': set to 'sge' to use SGE jobmanager
+#   (see https://support.10xgenomics.com/single-cell-gene-expression/software/pipelines/latest/advanced/cluster-mode)
+# - cellranger_maxjobs and cellranger_mempercore only used if jobmode is
+#   not 'local'
+# - cellranger_localmem and cellranger_localcores only used if jobmode
+#   is 'local'
+;[10xgenomics]
+;cellranger_jobmode = local
+;cellranger_localmem = 5
+;cellranger_localcores = 1
+;cellranger_maxjobs = 24
+;cellranger_mempercore = 5
+;cellranger_jobinterval = 100
 
 # Platform specific settings
 # Make sections [platform:NAME] and add parameters to
 # override the default bcl2fastq settings (i.e. number of
 # processors, version, lane splitting etc)
-[platform:nextseq]
-bcl_converter = bcl2fastq>=2.0
-no_lane_splitting = True
+# See https://auto-process-ngs.readthedocs.io/en/latest/configuration.html#sequencers-and-platforms
+# For example:
+;[platform:nextseq]
+;bcl_converter = bcl2fastq>=2.0
+;no_lane_splitting = True
 
 # fastq_stats settings
-[fastq_stats]
-nprocessors = 1
+# - nprocessors taken from 'stats' runner if not set (recommended)
+;[fastq_stats]
+;nprocessors = None
 
 # Define runners for specific jobs
-[runners]
-bcl2fastq = SimpleJobRunner
-bcl_convert = SimpleJobRunner
-barcode_analysis = SimpleJobRunner
-merge_fastqs = SimpleJobRunner
-fastqc = SimpleJobRunner
-fastq_screen  = SimpleJobRunner
-qualimap = SimpleJobRunner
-rseqc = SimpleJobRunner
-star = SimpleJobRunner
-stats = SimpleJobRunner
-publish_qc = SimpleJobRunner
-rsync = SimpleJobRunner
-cellranger_mkfastq = SimpleJobRunner
-cellranger_count = SimpleJobRunner
-cellranger_multi = SimpleJobRunner
-icell8 = SimpleJobRunner
-icell8_contaminant_filter = SimpleJobRunner
-icell8_statistics = SimpleJobRunner
-icell8_report = SimpleJobRunner
+# See https://auto-process-ngs.readthedocs.io/en/latest/configuration.html#job-runners
+;[runners]
+;bcl2fastq = SimpleJobRunner
+;bcl_convert = SimpleJobRunner
+;barcode_analysis = SimpleJobRunner
+;merge_fastqs = SimpleJobRunner
+;fastqc = SimpleJobRunner
+;fastq_screen  = SimpleJobRunner
+;picard = SimpleJobRunner
+;qualimap = SimpleJobRunner
+;rseqc = SimpleJobRunner
+;star = SimpleJobRunner
+;stats = SimpleJobRunner
+;publish_qc = SimpleJobRunner
+;rsync = SimpleJobRunner
+;cellranger_mkfastq = SimpleJobRunner
+;cellranger_count = SimpleJobRunner
+;cellranger_multi = SimpleJobRunner
 
 # Defaults for metadata
-[metadata]
-default_data_source = None
+# See https://auto-process-ngs.readthedocs.io/en/latest/configuration.html#default-metadata
+;[metadata]
+;default_data_source = None
 
 # Settings for archiving analyses
-# dirn should be a directory in the form [[user@]host:]path
-[archive]
-dirn = None
-log = None
-group = None
-chmod = None
+# - dirn is the top-level directory in the form [[user@]host:]path
+;[archive]
+;dirn = None
+;log = None
+;group = None
+;chmod = None
 
 # Settings for uploading QC reports
-[qc_web_server]
-# dirn should be a directory in the form [[user@]host:]path
-dirn = None
-# url is the top level URL that the 
-url = None
-# If set then use the YEAR/PLATFORM hierarchy under the
-# directory pointed at by dirn
-use_hierarchy = False
-# If set then exclude ZIP archives from publication
-exclude_zip_files = False
+# - dirn should be a directory in the form [[user@]host:]path
+# - url is the top level URL that will be reported
+# - use_hierarchy sets whether to use the YEAR/PLATFORM hierarchy
+#   under the publication directory pointed at by dirn
+# - exclude_zip_files sets whether to exclude ZIP archives from
+#   publication
+;[qc_web_server]
+;dirn = None
+;url = None
+;use_hierarchy = False
+;exclude_zip_files = False
 
 # Templates for reporting
 # Assign fields to template names for reporting projects
-[reporting_templates]
-#bcf = datestamp,,user,run_id,#samples,#cells,organism,library_type,PI,analysis_dir
+# See https://auto-process-ngs.readthedocs.io/en/latest/using/report.html#customising-data-that-are-reported-fields-and-templates
+;[reporting_templates]
+;bcf = datestamp,,user,run_id,#samples,#cells,organism,library_type,PI,analysis_dir
 
 # Destinations data can be copied to using 'transfer_data.py'
 # Define destinations with sections '[destination:NAME]' and
@@ -205,13 +188,23 @@ exclude_zip_files = False
 #   zipped QC reports with the copied data
 # - hard_links: whether to hard link files instead of copying
 #   them (only for local copies on same filesystem)
-#[destination:webserver]
-#directory = /mnt/hosted/web
-#subdir = random_bin
-#zip_fastqs = true
-#max_zip_size = 5G
-#readme_template = README.webserver.txt
-#url = http://awesome.com/data
-#include_downloader = false
-#include_qc_report = true
-#hard_links = false
+# See https://auto-process-ngs.readthedocs.io/en/latest/using/managing_data.html#transfer-data-py-copying-data-for-transfer-to-end-users
+;[destination:webserver]
+;directory = /mnt/hosted/web
+;subdir = random_bin
+;zip_fastqs = true
+;max_zip_size = 5G
+;readme_template = README.webserver.txt
+;url = http://awesome.com/data
+;include_downloader = true
+;include_qc_report = true
+;hard_links = false
+
+# ICELL8 settings
+;[icell8]
+;aligner = None
+;batch_size = 5000000
+;mammalian_conf_file = None
+;contaminants_conf_file = None
+;nprocessors_contaminant_filter = 1
+;nprocessors_statistics = 1
