Documentation: add 'sphinx' and 'sphinx_rtd_theme' to requirements.txt.

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,6 @@ matplotlib
 pandas
 pillow
 psutil
+sphinx
+sphinx_rtd_theme
 git+https://github.com/fls-bioinformatics-core/genomics.git#egg=genomics-bcftbx
