--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -15,3 +15,6 @@ python:
     - requirements: docs/requirements.txt
     - method: pip
       path: .
+
+sphinx:
+  configuration: docs/source/conf.py
