settings: add a new 'transfer_data' job runner to the config file.

--- a/config/auto_process.ini.sample
+++ b/config/auto_process.ini.sample
@@ -131,6 +131,7 @@
 ;stats = SimpleJobRunner
 ;publish_qc = SimpleJobRunner
 ;rsync = SimpleJobRunner
+;transfer_data = SimpleJobRunner
 ;cellranger_mkfastq = SimpleJobRunner
 ;cellranger_count = SimpleJobRunner
 ;cellranger_multi = SimpleJobRunner
