settings: add 'custom_project_metadata' setting to 'metadata' section.
Adds a new parameter 'custom_project_metadata' to the 'metadata' section of the config file, which will be used to specify a list of custom metadata items to be added to each new project.

--- a/config/auto_process.ini.sample
+++ b/config/auto_process.ini.sample
@@ -141,6 +141,7 @@
 # See https://auto-process-ngs.readthedocs.io/en/latest/configuration.html#default-metadata
 ;[metadata]
 ;default_data_source = None
+;custom_project_metadata = None
 
 # Settings for archiving analyses
 # - dirn is the top-level directory in the form [[user@]host:]path
